--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,35 +1,15 @@
 <div class="col-sm-3 col-md-2 sidebar">
-  <div>
-    {% assign active = false %}
-    {% if page.categories contains 'lti1' %}
-      {% assign active = true %}
-    {% endif %}
-    <a data-toggle="collapse" href="#lti1-section" aria-expanded="{{active}}" aria-controls="lti1-section">
-      <h3>LTI 1</h3>
-    </a>
-    <ul id="lti1-section" class="nav nav-sidebar collapse {% if active %}in{% endif %}">
-      {% for post in site.categories.lti1 %}
-      <li {% if page.url == post.url %}class="active"{% endif %}>
-        <a href="{{ post.url}}">
-          {{ post.title }}
-          {% if page.url == post.url %}
-          <span class="sr-only">(current)</span>
-          {% endif %}
-        </a>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
+  {% for section in site.data.sections %}
   <div>
     {% assign active = false %}
     {% if page.categories contains 'content-item' %}
     {% assign active = true %}
     {% endif %}
     <a data-toggle="collapse" href="#content-item-section" aria-expanded="{{active}}" aria-controls="collapseSubsection">
-      <h3>Content Item</h3>
+      <h3>{{section.name}}</h3>
     </a>
     <ul id="content-item-section" class="nav nav-sidebar collapse {% if active %}in{% endif %}">
-      {% for post in site.categories.content-item %}
+      {% for post in site.categories[section.category] %}
       <li {% if page.url == post.url %}class="active"{% endif %}>
           <a href="{{ post.url}}">
             {{ post.title }}
@@ -41,4 +21,5 @@
       {% endfor %}
     </ul>
   </div>
+  {% endfor %}
 </div>
