--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,10 @@ layout: default
 <div class="post">
 
   <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+    <h1 class="post-title">
+      {{ page.title }}
+      <a class="edit-page-link" href="https://github.com/instructure/lti_docs/tree/master/{{ page.path }}" target="_blank">Edit on GitHub</a>
+    </h1>
   </header>
 
   <article class="post-content">
