--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -85,6 +85,14 @@ body {
     margin-top: 0;
 }
 
+.edit-page-link {
+    float: right;
+    font-size: 16px;
+    font-weight: normal;
+    line-height: 20px;
+    margin-top: 17px;
+}
+
 
 /*
  * Placeholder dashboard ideas
