--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -7,15 +7,31 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
+      <a class="navbar-brand" href="{{ site.baseurl }}/content-item/2015/06/09/content-item-getting-started.html">{{ site.title }}</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
-      <ul class="nav navbar-nav navbar-right">
-        <!--<li><a href="#">Help</a></li>-->
+      <ul class="nav navbar-nav navbar-right mobile-only">
+        {% for section in site.data.sections %}
+        <li>
+          <a class="dropdown-menu" data-toggle="dropdown" role="button" href="#" aria-controls="collapseSubsection">
+            <span class="section-title">{{section.name}}</span>
+          </a>
+          <ul class="dropdown-menu">
+            {% assign posts = site.categories[section.category] | sort: 'position', 'last' %}
+            {% for post in posts %}
+            <li {% if page.url == post.url %}class="active"{% endif %}>
+              <a href="{{ site.baseurl }}{{ post.url}}">
+                {{ post.title }}
+                {% if page.url == post.url %}
+                <span class="sr-only">(current)</span>
+                {% endif %}
+              </a>
+            </li>
+            {% endfor %}
+          </ul>
+        </li>
+        {% endfor %}
       </ul>
-      <form class="navbar-form navbar-right">
-        <!--<input type="text" class="form-control" placeholder="Search...">-->
-      </form>
     </div>
   </div>
 </nav>
