--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
     {% assign active = true %}
     {% endif %}
     <a data-toggle="collapse" href="#content-item-section" aria-expanded="{{active}}" aria-controls="collapseSubsection">
-      <h3>{{section.name}}</h3>
+      <span class="section-title">{{section.name}}</span>
     </a>
     <ul id="content-item-section" class="nav nav-sidebar collapse {% if active %}in{% endif %}">
       {% assign posts = site.categories[section.category] | sort: 'position', 'last' %}
