--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,12 +9,13 @@
     <div class="container-fluid">
       <div class="row">
         {% include sidebar.html %}
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          {{ content }}
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+          <div class="main">
+            {{ content }}
+          </div>
         </div>
       </div>
     </div>
-    {% include footer.html %}
   </body>
 
 </html>
