--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -32,6 +32,21 @@ body {
 /* Hide for mobile, show later */
 .sidebar {
     display: none;
+
+    a:hover, a:active, a:visited, a {
+      text-decoration: none !important;
+    }
+
+    ul.nav-sidebar {
+      border-bottom: solid 1px lightgrey;
+    }
+
+    span.section-title {
+      color: black;
+      font-size: 19px;
+      margin-bottom: 5px;
+      display: block;
+    }
 }
 @media (min-width: 768px) {
     .sidebar {
@@ -54,17 +69,19 @@ body {
     margin-right: -21px; /* 20px padding + 1px border */
     margin-bottom: 20px;
     margin-left: -20px;
-    background-color: #959595;
 }
 .nav-sidebar > li > a {
     padding-right: 20px;
     padding-left: 20px;
 }
+.nav-sidebar >li:not(.active) > a:hover {
+  background-color: #DADADA;
+}
 .nav-sidebar > .active > a,
 .nav-sidebar > .active > a:hover,
 .nav-sidebar > .active > a:focus {
     color: #fff;
-    background-color: #428bca;
+    background-color: #1a6ecc;
 }
 
 
@@ -112,3 +129,22 @@ body {
     display: inline-block;
     border-radius: 50%;
 }
+
+/*
+ * Footer
+ */
+ .site-footer {
+    border-top: 1px solid lightgrey;
+    padding-top: 10px;
+    margin: 25px 40px 0px 40px;
+
+    ul {
+      list-style: none;
+      margin-left: 5px;
+    }
+
+    .footer-sub-title {
+      font-size: 15px;
+      display: block;
+    }
+ }
